--- a/src/assets/scss/settings/_settings.variables.scss
+++ b/src/assets/scss/settings/_settings.variables.scss
@@ -10,3 +10,5 @@ $cursors: default, not-allowed, wait;
 // ANIMATION
 $controls-transition: 0.3s;
 $transition-duration: 0.3s;
+
+$toolbar-height: 4rem;
